--- a/index.html
+++ b/index.html
@@ -55,7 +55,9 @@
           </li>
         </ul>
 
-        <a class="button banner__button" href="#booking">Забронировать</a>
+        <div class="banner__button-container">
+          <a class="button banner__button" href="#booking">Забронировать</a>
+        </div>
 
         <a class="banner__next" href="#rest"></a>
       </div>
@@ -346,7 +348,7 @@
             <ul class="contact__list">
               <li class="contact__item contact__address">
                 <div>г. Москва</div>
-                <div>ул. Аквамарина, 16</div>
+                <div>ул. Усачёва, 29 к3</div>
               </li>
               <li class="contact__item contact__phone">
                 <a class="contact__link" href="tel:89509302893">8 (950) 930 - 28 - 93</a>
