--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/svg+xml" href="img/icon.svg">
   <link rel="stylesheet" href="styles/style.css">
+  <script type="module" src="scripts/index.js"></script>
 </head>
 
 <body>
@@ -347,11 +348,46 @@
         <h2 class="subtitle faq__title">Частые вопросы</h2>
 
         <ul class="faq__list">
-          <li class="faq__item">Можно ли забронировать комнату онлайн?</li>
-          <li class="faq__item">Могут ли мне вернуть деньги за бронь?</li>
-          <li class="faq__item">Какая комната самая популярная?</li>
-          <li class="faq__item">Как получить VIP карту?</li>
-          <li class="faq__item">Какая комната самая популярная?</li>
+          <li class="faq__item">
+            <button class="faq__button">Можно ли забронировать комнату онлайн?</button>
+            <div class="faq__text-wrapper">
+              <p class="faq__text">
+                Да, забронировать комнату вы можете онлайн, заполнив форму на нашем сайте. Также вы можете забронировать комнату позвонив по телефону 8 (999) 958 - 48 - 38
+              </p>
+            </div>
+          </li>
+          <li class="faq__item">
+            <button class="faq__button">Можно ли забронировать комнату онлайн?</button>
+            <div class="faq__text-wrapper">
+              <p class="faq__text">
+                Да, забронировать комнату вы можете онлайн, заполнив форму на нашем сайте. Также вы можете забронировать комнату позвонив по телефону 8 (999) 958 - 48 - 38
+              </p>
+            </div>
+          </li>
+          <li class="faq__item">
+            <button class="faq__button">Можно ли забронировать комнату онлайн?</button>
+            <div class="faq__text-wrapper">
+              <p class="faq__text">
+                Да, забронировать комнату вы можете онлайн, заполнив форму на нашем сайте. Также вы можете забронировать комнату позвонив по телефону 8 (999) 958 - 48 - 38
+              </p>
+            </div>
+          </li>
+          <li class="faq__item">
+            <button class="faq__button">Можно ли забронировать комнату онлайн?</button>
+            <div class="faq__text-wrapper">
+              <p class="faq__text">
+                Да, забронировать комнату вы можете онлайн, заполнив форму на нашем сайте. Также вы можете забронировать комнату позвонив по телефону 8 (999) 958 - 48 - 38
+              </p>
+            </div>
+          </li>
+          <li class="faq__item">
+            <button class="faq__button">Можно ли забронировать комнату онлайн?</button>
+            <div class="faq__text-wrapper">
+              <p class="faq__text">
+                Да, забронировать комнату вы можете онлайн, заполнив форму на нашем сайте. Также вы можете забронировать комнату позвонив по телефону 8 (999) 958 - 48 - 38
+              </p>
+            </div>
+          </li>
         </ul>
       </div>
     </section>
