add overlay form

--- a/index.html
+++ b/index.html
@@ -47,6 +47,35 @@
     </div>
   </header>
 
+  <div class="overlay">
+    <div class="overlay__container">
+      <button class="overlay__close">
+        <svg width="42" height="42" viewBox="0 0 42 42" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <rect y="38.4407" width="54.3632" height="5.03363" rx="2" transform="rotate(-45 0 38.4407)" fill="white" />
+          <rect x="3.55957" width="54.3632" height="5.03363" rx="2" transform="rotate(45 3.55957 0)" fill="white" />
+        </svg>
+      </button>
+
+      <form class="call" action="https://jsonplaceholder.typicode.com/posts" method="post">
+        <fieldset class="call__fieldset">
+          <legend class="call__legend">Заказать звонок</legend>
+
+          <label class="call__label">
+            <span class="call__subtitle">Имя</span>
+            <input class="call__input" type="text" name="name" required>
+          </label>
+
+          <label class="call__label">
+            <span class="call__subtitle">Телефон</span>
+            <input class="call__input" type="tel" name="phone" required>
+          </label>
+
+          <button class="button call__submit">Позвонить мне</button>
+        </fieldset>
+      </form>
+    </div>
+  </div>
+
   <main class="main">
     <section class="section banner">
       <div class="container banner__container">
@@ -352,7 +381,8 @@
             <button class="faq__button">Можно ли забронировать комнату онлайн?</button>
             <div class="faq__text-wrapper">
               <p class="faq__text">
-                Да, забронировать комнату вы можете онлайн, заполнив форму на нашем сайте. Также вы можете забронировать комнату позвонив по телефону 8 (999) 958 - 48 - 38
+                Да, забронировать комнату вы можете онлайн, заполнив форму на нашем сайте. Также вы можете забронировать
+                комнату позвонив по телефону 8 (999) 958 - 48 - 38
               </p>
             </div>
           </li>
@@ -360,7 +390,8 @@
             <button class="faq__button">Можно ли забронировать комнату онлайн?</button>
             <div class="faq__text-wrapper">
               <p class="faq__text">
-                Да, забронировать комнату вы можете онлайн, заполнив форму на нашем сайте. Также вы можете забронировать комнату позвонив по телефону 8 (999) 958 - 48 - 38
+                Да, забронировать комнату вы можете онлайн, заполнив форму на нашем сайте. Также вы можете забронировать
+                комнату позвонив по телефону 8 (999) 958 - 48 - 38
               </p>
             </div>
           </li>
@@ -368,7 +399,8 @@
             <button class="faq__button">Можно ли забронировать комнату онлайн?</button>
             <div class="faq__text-wrapper">
               <p class="faq__text">
-                Да, забронировать комнату вы можете онлайн, заполнив форму на нашем сайте. Также вы можете забронировать комнату позвонив по телефону 8 (999) 958 - 48 - 38
+                Да, забронировать комнату вы можете онлайн, заполнив форму на нашем сайте. Также вы можете забронировать
+                комнату позвонив по телефону 8 (999) 958 - 48 - 38
               </p>
             </div>
           </li>
@@ -376,7 +408,8 @@
             <button class="faq__button">Можно ли забронировать комнату онлайн?</button>
             <div class="faq__text-wrapper">
               <p class="faq__text">
-                Да, забронировать комнату вы можете онлайн, заполнив форму на нашем сайте. Также вы можете забронировать комнату позвонив по телефону 8 (999) 958 - 48 - 38
+                Да, забронировать комнату вы можете онлайн, заполнив форму на нашем сайте. Также вы можете забронировать
+                комнату позвонив по телефону 8 (999) 958 - 48 - 38
               </p>
             </div>
           </li>
@@ -384,7 +417,8 @@
             <button class="faq__button">Можно ли забронировать комнату онлайн?</button>
             <div class="faq__text-wrapper">
               <p class="faq__text">
-                Да, забронировать комнату вы можете онлайн, заполнив форму на нашем сайте. Также вы можете забронировать комнату позвонив по телефону 8 (999) 958 - 48 - 38
+                Да, забронировать комнату вы можете онлайн, заполнив форму на нашем сайте. Также вы можете забронировать
+                комнату позвонив по телефону 8 (999) 958 - 48 - 38
               </p>
             </div>
           </li>
