--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
 <body>
   <header class="section header">
+    <div class="header__background"></div>
     <div class="container header__container">
       <button class="menu-button">
         <svg width="54" height="29" viewBox="0 0 54 29" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
@@ -41,6 +42,8 @@
             <a class="navigation__link" href="#contact">Контакты</a>
           </li>
         </ul>
+
+        <button class="button header__button header__button_nav">Заказать звонок</button>
       </nav>
 
       <button class="button header__button">Заказать звонок</button>
