--- a/index.html
+++ b/index.html
@@ -25,25 +25,27 @@
       <img class="header__logo" src="img/logo.svg" alt="Логотип GO">
 
       <nav class="navigation">
-        <ul class="navigation__list">
-          <li class="navigation__item">
-            <a class="navigation__link" href="#rooms">залы</a>
-          </li>
-          <li class="navigation__item">
-            <a class="navigation__link" href="#about">О нас</a>
-          </li>
-          <li class="navigation__item">
-            <a class="navigation__link" href="#booking">Бронь</a>
-          </li>
-          <li class="navigation__item">
-            <a class="navigation__link" href="#reviews">отзывы</a>
-          </li>
-          <li class="navigation__item">
-            <a class="navigation__link" href="#contact">Контакты</a>
-          </li>
-        </ul>
+        <div class="navigation__wrapper">
+          <ul class="navigation__list">
+            <li class="navigation__item">
+              <a class="navigation__link" href="#rooms">залы</a>
+            </li>
+            <li class="navigation__item">
+              <a class="navigation__link" href="#about">О нас</a>
+            </li>
+            <li class="navigation__item">
+              <a class="navigation__link" href="#booking">Бронь</a>
+            </li>
+            <li class="navigation__item">
+              <a class="navigation__link" href="#reviews">отзывы</a>
+            </li>
+            <li class="navigation__item">
+              <a class="navigation__link" href="#contact">Контакты</a>
+            </li>
+          </ul>
 
-        <button class="button header__button header__button_nav">Заказать звонок</button>
+          <button class="button navigation__button">Заказать звонок</button>
+        </div>
       </nav>
 
       <button class="button header__button">Заказать звонок</button>
