--- a/index.html
+++ b/index.html
@@ -5,8 +5,12 @@
   <meta charset="utf-8">
   <title>Game Over</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <link rel="icon" type="image/svg+xml" href="img/icon.svg">
   <link rel="stylesheet" href="styles/style.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css" />
+
+  <script defer src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
   <script type="module" src="scripts/index.js"></script>
 </head>
 
@@ -21,9 +25,9 @@
             <rect y="24" width="31" height="5" rx="2" />
           </svg>
         </button>
-  
+
         <img class="header__logo" src="img/logo.svg" alt="Логотип GO">
-  
+
         <button class="button header__button">Заказать звонок</button>
       </div>
 
@@ -46,7 +50,7 @@
               <a class="navigation__link" href="#contact">Контакты</a>
             </li>
           </ul>
-  
+
           <button class="button navigation__button">Заказать звонок</button>
         </div>
       </nav>
@@ -335,46 +339,69 @@
       <div class="container">
         <h2 class="subtitle reviews__title">Отзывы посетителей</h2>
 
-        <ul class="reviews__list">
-          <li class="reviews__item">
-            <div class="reviews__author">
-              <div class="reviews__photo">
-                <img class="reviews__image" src="img/maks-samoilov.png" alt="Фотография Макса Самойлова">
+        <div class="swiper swiper-container">
+          <div class="swiper-wrapper reviews__list">
+            <div class="swiper-slide reviews__item">
+              <div class="reviews__author">
+                <div class="reviews__photo">
+                  <img class="reviews__image" src="img/maks-samoilov.png" alt="Фотография Макса Самойлова">
+                </div>
+                <div class="reviews__name">Макс Самойлов</div>
               </div>
-              <div class="reviews__name">Макс Самойлов</div>
+              <p class="reviews__review-text">
+                Отмечали здесь день рождения с компанией друзей, все было очень круто! VR очки это просто бомба, никогда
+                еще я не был в таком полном игровом погружении. Сервис на высоте!
+              </p>
             </div>
-            <p class="reviews__review-text">
-              Отмечали здесь день рождения с компанией друзей, все было очень круто! VR очки это просто бомба, никогда
-              еще я не был в таком полном игровом погружении. Сервис на высоте!
-            </p>
-          </li>
 
-          <li class="reviews__item">
-            <div class="reviews__author">
-              <div class="reviews__photo">
-                <img class="reviews__image" src="img/oksana-grigorieva.png" alt="Фотография Оксаны Григорьевой">
+            <div class="swiper-slide reviews__item">
+              <div class="reviews__author">
+                <div class="reviews__photo">
+                  <img class="reviews__image" src="img/oksana-grigorieva.png" alt="Фотография Оксаны Григорьевой">
+                </div>
+                <div class="reviews__name">Оксана Григорьева</div>
               </div>
-              <div class="reviews__name">Оксана Григорьева</div>
+              <p class="reviews__review-text">
+                Были в комнате Дикий Запад, пели в караоке под Шакиру, отличный получился корпоратив! У нас в городе
+                больше нет подобных заведений
+              </p>
             </div>
-            <p class="reviews__review-text">
-              Были в комнате Дикий Запад, пели в караоке под Шакиру, отличный получился корпоратив! У нас в городе
-              больше нет подобных заведений
-            </p>
-          </li>
 
-          <li class="reviews__item">
-            <div class="reviews__author">
-              <div class="reviews__photo">
-                <img class="reviews__image" src="img/nikita-yaschenko.png" alt="Фотография Никиты Ященко">
+            <div class="swiper-slide reviews__item">
+              <div class="reviews__author">
+                <div class="reviews__photo">
+                  <img class="reviews__image" src="img/nikita-yaschenko.png" alt="Фотография Никиты Ященко">
+                </div>
+                <div class="reviews__name">Никита Ященко</div>
               </div>
-              <div class="reviews__name">Никита Ященко</div>
+              <p class="reviews__review-text">
+                Немного подвисала игра в VR очках, а так все норм. Крутое оформление комнаты в стиле звездных войн,
+                попал
+                в атмосферу космоса
+              </p>
             </div>
-            <p class="reviews__review-text">
-              Немного подвисала игра в VR очках, а так все норм. Крутое оформление комнаты в стиле звездных войн, попал
-              в атмосферу космоса
-            </p>
-          </li>
-        </ul>
+          </div>
+
+          <div class="swiper-button-next"></div>
+          <div class="swiper-button-prev"></div>
+
+          <!-- <div class="swiper__button swiper__button_prev">
+            <svg width="34" height="66" viewBox="0 0 34 66" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M32.5269 0L33.9411 1.41421L1.41422 33.9411L5.126e-06 32.5269L32.5269 0Z" fill="#6C0287" />
+              <path d="M5.126e-06 32.5269L1.41422 31.1127L33.9411 63.6396L32.5269 65.0538L5.126e-06 32.5269Z"
+                fill="#6C0287" />
+            </svg>
+          </div>
+          <div class="swiper__button swiper__button_next">
+            <svg width="35" height="66" viewBox="0 0 35 66" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M1.52686 0L0.112642 1.41421L32.6396 33.9411L34.0538 32.5269L1.52686 0Z" fill="#6C0287" />
+              <path d="M34.0538 32.5269L32.6396 31.1127L0.112642 63.6396L1.52686 65.0538L34.0538 32.5269Z"
+                fill="#6C0287" />
+            </svg>
+          </div> -->
+        </div>
+
+
       </div>
     </section>
 
