--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="icon" type="image/svg+xml" href="img/icon.svg">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css">
+  <link rel="stylesheet" href="https://unpkg.com/js-datepicker/dist/datepicker.min.css">
   <link rel="stylesheet" href="styles/style.css">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css" />
 
   <script defer src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
   <script defer src="https://unpkg.com/just-validate@latest/dist/just-validate.production.min.js"></script>
+  <script defer src="https://unpkg.com/js-datepicker"></script>
   <script type="module" src="scripts/index.js"></script>
 </head>
 
@@ -247,22 +249,17 @@
               <legend class="booking__legend booking__legend_small-margin">Выбери дату и время</legend>
 
               <div class="booking__final">
-                <select class="booking__select booking__select_date" name="date" required>
-                  <option class="booking__option" value="" selected disabled>Дата</option>
-                  <option class="booking__option" value="23-11-22">23.11.22</option>
-                  <option class="booking__option" value="28-11-22">28.11.22</option>
-                  <option class="booking__option" value="06-12-22">06.12.22</option>
-                </select>
+                <input class="booking__select booking__select_date" name="date" placeholder="Дата" required>
 
                 <select class="booking__select booking__select_time" name="time" required>
-                  <option class="booking__option" value="" selected disabled>Время</option>
+                  <option class="booking__option" value="" selected disabled hidden>Время</option>
                   <option class="booking__option" value="12-30">12:30</option>
                   <option class="booking__option" value="16-00">16:00</option>
                   <option class="booking__option" value="19-30">19:30</option>
                 </select>
 
                 <select class="booking__select booking__select_visitors" name="visitors" required>
-                  <option class="booking__option" value="" selected disabled>Сколько человек</option>
+                  <option class="booking__option" value="" selected disabled hidden>Сколько человек</option>
                   <option class="booking__option" value="1">Один человек</option>
                   <option class="booking__option" value="2">Два человека</option>
                   <option class="booking__option" value="3">Три человека</option>
